# Embedded_Drone_Project

./: Cargo.toml  README.md
communication/: Cargo.toml
communication/src/: dep_message_reciever.rs  dep_messages.rs  initialize.rs  lib.rs
controller/: Cargo.toml
controller/src/: lib.rs  main.rs
dronecode/: Cargo.toml
dronecode/src/: control.rs  fsm.rs  lib.rs  main.rs  tx_rx_pc_side.rs  util.rs
dronecode/src/filtering/: atan_lut.rs  butter_filter.rs  filter_util.rs  kalman_filter.rs  mod.rs  yaw_sys.rs
runner/: Cargo.toml
runner/src/: kalman_proc.py  lut_code.txt  main.rs  signal_analyzer.py  signal_proc.py
user_interface/: Cargo.toml
user_interface/sensor_data/: Accelerometer.csv  Gyroscope.csv
user_interface/src/: drone_values.json  lib.rs  main.rs  read_csv.rs  ui_thread.rs
