[package]
name = "communication"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf51-hal = "0.16.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = "0.5.1"
